// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modify recipe page component  expected to render a NotFound page when recipe is not found  1`] = `
<RecipeEditor
  handleButtonClick={[Function]}
  hasNotFound={true}
  hasRender={true}
  loading={false}
  message={[Function]}
  submitButtonText="modify recipe"
/>
`;

exports[`Modify recipe page component  should redirect to recipe details page when recipe is modified  1`] = `
<RecipeEditor
  handleButtonClick={[Function]}
  hasNotFound={false}
  hasRender={true}
  loading={false}
  message={[Function]}
  submitButtonText="modify recipe"
/>
`;

exports[`Modify recipe page component  should render modify recipe page 1`] = `
<RecipeEditor
  handleButtonClick={[Function]}
  hasNotFound={false}
  hasRender={true}
  loading={false}
  message={[Function]}
  submitButtonText="modify recipe"
/>
`;

exports[`Modify recipe page component  should send a modify recipe request when modify recipe button
  is clicked 1`] = `
<RecipeEditor
  handleButtonClick={[Function]}
  hasNotFound={false}
  hasRender={true}
  loading={false}
  message={[Function]}
  submitButtonText="modify recipe"
/>
`;
